--- a/css/styles.css
+++ b/css/styles.css
@@ -1,120 +1,192 @@
+:root {
+  --black: #000000;
+  --rich-black: #000e14ff;
+  --rich-black-2: #00111aff;
+  --rich-black-3: #00141fff;
+  --rich-black-4: #001824ff;
+  --rich-black-5: #001b29ff;
+  --prussian-blue: #002233ff;
+  --prussian-blue-2: #00293dff;
+  --prussian-blue-3: #003047ff;
+  --prussian-blue-4: #003652ff;
+  --indigo-dye: #003d5cff;
+  --color: #fff;
+}
+
 /* Global Styles */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #ebfaf9;
-    color: #333;
-    line-height: 1.6;
-    min-height: 100vh;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+  color: var(--color);
+  font-family: "Roboto", sans-serif;
+  background: linear-gradient(
+    90deg,
+    var(--black),
+    var(--rich-black),
+    var(--rich-black-3)
+  );
+  min-height: 100vh;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* Nav Bar */
 nav {
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: var(--rich-black);
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
 }
 
 nav ul {
-    width: 100%;
-    list-style: none;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+  width: 100%;
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 nav ul li {
-    height: 50px;
+  height: 50px;
 }
 
 nav a {
-    height: 100%;
-    padding: 0 30px;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    color: #000;
+  height: 100%;
+  padding: 0 30px;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  color: var(--color);
+  position: relative;
 }
 
 nav a:hover {
-    background-color: #f0f0f0;
+  background-color: #00293d2a;
+}
+
+nav a::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--indigo-dye);
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease-in-out;
+}
+
+nav a:hover::after {
+  transform: scaleX(1);
 }
 
 nav li:first-child {
-    margin-right: auto;
+  margin-right: auto;
 }
 #logo {
-    font-size: 24px;
-    font-weight: bold;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
+#logo:hover {
+  background: transparent;
+}
+#logo::after {
+  display: none;
+}
 /* Sidebar */
 .sidebar {
-    position: fixed;
-    top: 0;
-    right: 0;
-    height: 100vh;
-    width: 250px;
-    z-index: 999;
-    background-color: #ffffff1f;
-    backdrop-filter: blur(10px);
-    box-shadow: 0 4px 8px #ffffff23;
-    display: none;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 250px;
+  z-index: 999;
+  background-color: #ffffff1f;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 4px 8px #ffffff23;
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .sidebar li {
-    width: 100%;
+  width: 100%;
 }
 
 .sidebar a {
-    width: 100%;
+  width: 100%;
 }
 
 .sidebar.show {
-    display: flex;
+  display: flex;
 }
-.fa-toggle-on{
-    font-size: 24px;
-    margin: .2rem;
-    position: fixed;
-    left: 20px;
+.hideOnpc {
+  display: none;
 }
-/* toggle dark */
+/* hero section */
 
-.dark {
-    background-color: #000;
-    color: #fff;
+#hero {
+  /* margin: 0; */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.527), transparent),
+    url("../assets/image/world.jpg") no-repeat top center/cover;
+  padding: 2rem;
+  height: 80svh;
+  color: var(--color);
+  width: 100%;
+  opacity: 0;
+  animation: fadeIn 2s forwards;
 }
 
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
 
+  font-family: Fera Code Pro, monospace;
+}
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+#hero h1 {
+  font-size: 3rem;
+}
+
+#hero p {
+  font-size: 1.5rem;
+}
 
 @media (max-width: 800px) {
-    .hideOnMobile {
-        display: none;
-    }
+  .hideOnMobile {
+    display: none;
+  }
 
-    .hideOnpc {
-        display: block;
-    }
+  .hideOnpc {
+    display: block;
+  }
 }
 
 @media (max-width: 400px) {
-    .sidebar {
-        width: 100%;
-    }
+  .sidebar {
+    width: 100%;
+  }
 }
