--- a/css/fonts.css
+++ b/css/fonts.css
@@ -24,3 +24,21 @@
     font-style: normal;
   }
    */
+
+#hero h1 {
+  font-family: "Gowun Dodum", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+#hero p {
+  font-family: "Gowun Dodum", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+nav a {
+  font-family: "Gowun Dodum", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
