--- a/css/styles.css
+++ b/css/styles.css
@@ -349,11 +349,11 @@ img {
 .disaster-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 1.5rem;
-  margin: 2rem auto;
+  justify-content: space-evenly;
+  gap: 0.9rem;
+  margin: 0rem auto;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1600px;
 }
 
 /* Individual disaster cards */
@@ -364,16 +364,48 @@ img {
   width: 300px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-  overflow: hidden;
   position: relative;
+  padding: 0.5rem;
+  position: relative;
+}
+@property --angle {
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
+.disaster-card::after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-image: conic-gradient(
+    from var(--angle),
+    transparent 70%,
+    var(--platinum),
+    var(--french-gray-2),
+    var(--french-gray)
+  );
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  z-index: -1;
+  padding: 3px;
+  border-radius: 10px;
+  animation: 3s gar linear infinite;
+}
+
+.card::before {
+  filter: blur(10px);
+  opacity: 0.5;
 }
 
 .disaster-img {
   width: 100%;
-  height: 150px;
+  height: 300px;
   object-fit: cover;
+  border-radius: 12px;
 }
 
 /* Disaster name */
@@ -410,10 +442,41 @@ img {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  font-size: 0.8rem;
+  font-size: 1rem;
   transition: background-color 0.3s ease;
+  color: #adb5bd;
+  font-weight: 900;
 }
-
+.greenlight {
+  background-color: #00ff00;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+}
+.offGreen {
+  background-color: #78ac00;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+}
+.dullYeollow {
+  background-color: #ff9900;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+}
+.yellow {
+  background-color: #fbff00;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+}
+.red {
+  background-color: #ff0000;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+}
 .left-btn:hover,
 .right-btn:hover {
   background-color: var(--eerie-black);
@@ -455,6 +518,6 @@ img {
   color: var(--platinum);
 }
 
-/* Responsive Design */
-@media (max-width: 768px) {
+.cardsTwoBox {
+  margin: 0.8rem;
 }
