--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,3 @@
-:root {
-  --seasalt: #f8f9fa; /* Seasalt (for light accents) */
-  --antiflash-white: #e9ecef; /* Antiflash White */
-  --platinum: #dee2e6; /* Platinum */
-  --french-gray: #ced4da; /* French Gray */
-  --french-gray-2: #adb5bd; /* Lighter French Gray */
-  --slate-gray: #6c757d; /* Slate Gray */
-  --outer-space: #495057; /* Outer Space */
-  --onyx: #343a40; /* Onyx */
-  --eerie-black: #212529; /* Eerie Black */
-  --dark-background: #121212; /* Dark Background */
-  --dark-card: #1e1e1e; /* Dark Card Background */
-  --dark-border: #2a2a2a; /* Dark Border */
-  --dark-accent: #404040; /* Dark Accent */
-}
-
 /* Global Styles */
 * {
   margin: 0;
@@ -22,16 +6,22 @@
 }
 
 body {
-  color: var(--seasalt);
+  color: #000605;
   font-family: "Roboto", sans-serif;
-  background: var(--dark-background);
+  background: #eef7f9;
   min-height: 100vh;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+
 }
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
 
 /* Nav Bar */
 nav {
-  background-color: var(--onyx);
+  background: linear-gradient(45deg, #49c6e3, #2bb5d9, #82f7ff);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
@@ -53,13 +43,13 @@ nav a {
   text-decoration: none;
   display: flex;
   align-items: center;
-  color: var(--seasalt);
+  color: #e9ecef;
   font-weight: 700;
   position: relative;
 }
 
 nav a:hover {
-  background-color: var(--dark-accent);
+  background-color: #587d8e;
 }
 
 nav a::after {
@@ -69,7 +59,7 @@ nav a::after {
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: var(--seasalt);
+  background-color: #566a7e;
   transform: scaleX(0);
   transform-origin: left;
   transition: transform 0.3s ease-in-out;
@@ -82,6 +72,7 @@ nav a:hover::after {
 nav li:first-child {
   margin-right: auto;
 }
+
 #logo {
   font-size: 24px;
   font-weight: bold;
@@ -92,9 +83,11 @@ nav li:first-child {
 #logo:hover {
   background: transparent;
 }
+
 #logo::after {
   display: none;
 }
+
 /* Sidebar */
 .sidebar {
   position: fixed;
@@ -103,7 +96,7 @@ nav li:first-child {
   height: 100vh;
   width: 250px;
   z-index: 999;
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: #ffffff0d;
   backdrop-filter: blur(10px);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.23);
   display: none;
@@ -123,17 +116,18 @@ nav li:first-child {
 .sidebar.show {
   display: flex;
 }
+
 .hideOnpc {
   display: none;
 }
 
 /* Hero Section */
 #hero {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), transparent),
-    url("../assets/image/map.png") no-repeat top center/cover;
+  background: linear-gradient(to bottom, #0000009f, transparent),
+    url("../assets/image/map.jpeg") no-repeat top center/cover;
   padding: 2rem;
   height: 80svh;
-  color: var(--seasalt);
+  color: #020506;
   width: 100%;
   opacity: 0;
   animation: fadeIn 2s forwards;
@@ -146,6 +140,7 @@ nav li:first-child {
     opacity: 1;
   }
 }
+
 .hero-container {
   display: flex;
   flex-direction: column;
@@ -156,6 +151,7 @@ nav li:first-child {
   text-align: center;
   font-family: Fera Code Pro, monospace;
 }
+
 .hero-content {
   display: flex;
   flex-direction: column;
@@ -166,36 +162,40 @@ nav li:first-child {
 }
 
 #hero h1 {
-  color: var(--french-gray);
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  color: #fff;
   font-size: 3rem;
-  backdrop-filter: blur(10px);
+  /* backdrop-filter: blur(5px); */
   border-radius: 24px;
   padding: 1rem;
-  border: 2px solid var(--slate-gray);
+  /* border: 2px solid #495057; */
 }
 
 #hero p {
   font-size: 1.5rem;
+  font-weight: 700;
 }
 
 #weather-button {
-  background-color: var(--dark-border);
-  color: var(--seasalt);
+  background-color: #3d79a0;
+  color: #e9ecef;
   border: none;
-  background: var(--dark-accent);
   border-radius: 5px;
   padding: 10px 20px;
   font-size: 1rem;
   margin-top: 20px;
   cursor: pointer;
 }
+
 #weather-button a {
-  color: var(--seasalt);
+  color: #e9ecef;
   text-decoration: none;
 }
+
 #weather-button:hover {
-  background-color: var(--onyx);
-  color: var(--seasalt);
+  background-color: #11344b;
+  color: #e9ecef;
   transition: all 0.3s ease-in-out;
 }
 
@@ -211,9 +211,10 @@ nav li:first-child {
   flex-wrap: wrap;
   gap: 0.5rem;
 }
+
 .box {
   margin: 1rem;
-  color: var(--seasalt);
+  color: #061a35;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -221,15 +222,14 @@ nav li:first-child {
   justify-content: space-around;
   width: 500px;
   height: 400px;
-  background: linear-gradient(
-    45deg,
-    var(--dark-card),
-    var(--dark-border),
-    var(--dark-accent)
-  );
+  background: linear-gradient(45deg,
+      #d0d7d6,
+      #dfe6e6,
+      #f0f9fa);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
   border-radius: 8px;
 }
+
 img {
   width: 150px;
   border-radius: 50%;
@@ -240,59 +240,61 @@ img {
 .temperature-bar {
   margin: 10px 0;
 }
+
 .bar {
   width: 100%;
   height: 10px;
-  background-color: var(--dark-accent);
+  background-color: #2f556a;
   border-radius: 5px;
   overflow: hidden;
 }
 
 .fill {
   height: 100%;
-  background-color: var(--seasalt);
+  background: linear-gradient(45deg, #1f659a, #60eff5);
 }
+
 .output-btn {
   margin-top: 10px;
   padding: 10px 20px;
   border: none;
-  background-color: var(--dark-border);
-  color: var(--seasalt);
+  background-color: #1f2b33;
+  color: #e9ecef;
   border-radius: 5px;
   cursor: pointer;
 }
+
 .output-btn:hover {
   transition: all 0.3s ease-in-out;
-  border: 1px solid var(--dark-border);
-  background: transparent;
+  border: 1px solid #2a2a2a;
+  background: #17232f;
 }
 
 .main-box h2 {
   margin-bottom: 10px;
   font-size: 3rem;
-  color: var(--seasalt);
+  color: #edfcff;
 }
+
 .main-box {
   width: 800px;
   height: 400px;
-  margin: 15 auto;
+  margin: 10px;
   padding: 20px;
-  background: linear-gradient(
-    45deg,
-    var(--dark-card),
-    var(--dark-border),
-    var(--dark-accent)
-  );
+  background: linear-gradient(45deg,
+      #42b6c5,
+      #5dd1db,
+      #68faff);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
   border-radius: 8px;
-  color: var(--seasalt);
-
+  color: #edfcff;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   text-align: center;
 }
+
 .main-box p {
   margin-bottom: 20px;
   font-size: 1.2rem;
@@ -304,25 +306,29 @@ img {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  margin-top: 20px;
+  margin: .1rem;
 }
 
 .icon-box {
   text-align: center;
+  margin: .2rem;
 }
+
 .icon-box p {
   font-size: 0.9em;
 }
+
 .icon-box svg {
   margin-bottom: 10px;
 }
+
 #earth-image {
   animation: spin 120s linear infinite;
-  filter: drop-shadow(2px 2px 12px var(--slate-gray));
+  filter: drop-shadow(2px 2px 12px #495057);
 }
 
 #output-text {
-  color: var(--seasalt);
+  color: #e9ecef;
   font-size: 0.9rem;
   margin-top: 20px;
   width: 100%;
@@ -332,7 +338,8 @@ img {
   border-radius: 6px;
   overflow-y: scroll;
   overflow-x: hidden;
-  -ms-overflow-style: none; /* IE and Edge */
+  -ms-overflow-style: none;
+  /* IE and Edge */
   scrollbar-width: none;
 }
 
@@ -356,8 +363,8 @@ img {
 
 /* Individual disaster cards */
 .disaster-card {
-  background: var(--dark-card);
-  color: var(--seasalt);
+  background: #cad3d5;
+  color: #131821;
   border-radius: 10px;
   width: 300px;
   display: flex;
@@ -368,23 +375,23 @@ img {
   padding: 0.5rem;
   position: relative;
 }
+
 @property --angle {
   syntax: "<angle>";
   initial-value: 0deg;
   inherits: false;
 }
+
 .disaster-card::after {
   content: "";
   position: absolute;
   height: 100%;
   width: 100%;
-  background-image: conic-gradient(
-    from var(--angle),
-    transparent 70%,
-    var(--platinum),
-    var(--french-gray-2),
-    var(--french-gray)
-  );
+  background-image: conic-gradient(from var(--angle),
+      transparent 70%,
+      #68e5ea,
+      #68e5ea,
+      #42b6c5);
   top: 50%;
   left: 50%;
   translate: -50% -50%;
@@ -430,8 +437,8 @@ img {
 
 .left-btn,
 .right-btn {
-  background-color: var(--onyx);
-  color: var(--seasalt);
+  background: linear-gradient(45deg, #273b48, #829ba7);
+  color: #fff;
   border: none;
   border-radius: 50%;
   width: 40px;
@@ -440,44 +447,49 @@ img {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 1.1rem;
   transition: background-color 0.3s ease;
-  color: #adb5bd;
-  font-weight: 900;
+  font-weight: 900
 }
+
 .greenlight {
   background-color: #00ff00;
   height: 10px;
   width: 10px;
   border-radius: 50%;
 }
+
 .offGreen {
   background-color: #78ac00;
   height: 10px;
   width: 10px;
   border-radius: 50%;
 }
+
 .dullYeollow {
   background-color: #ff9900;
   height: 10px;
   width: 10px;
   border-radius: 50%;
 }
+
 .yellow {
   background-color: #fbff00;
   height: 10px;
   width: 10px;
   border-radius: 50%;
 }
+
 .red {
   background-color: #ff0000;
   height: 10px;
   width: 10px;
   border-radius: 50%;
 }
+
 .left-btn:hover,
 .right-btn:hover {
-  background-color: var(--eerie-black);
+  background-color: #2f556a;
 }
 
 /* Popup Modal */
@@ -488,18 +500,20 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(10px);
+  color: #fff;
   justify-content: center;
   align-items: center;
   z-index: 1000;
 }
 
 .popup-content {
-  background: var(--dark-card);
+  backdrop-filter: blur(10px);
+  background: #9ac3d177;
   padding: 2rem;
   border-radius: 10px;
   text-align: center;
-  color: var(--seasalt);
+  color: #021123;
   width: 300px;
 }
 
@@ -508,32 +522,37 @@ img {
   top: 10px;
   right: 20px;
   font-size: 1.5rem;
-  color: var(--seasalt);
+  color: #1f659a;
   cursor: pointer;
 }
 
 .close-btn:hover {
-  color: var(--platinum);
+  color: #cad3d5;
 }
 
 .cardsTwoBox {
   margin: 0.8rem;
 }
-/* Container for disaster cards */
-.disasterAll {
+
+/* !comments hide */
+
+/* .disasterAll {
+
   padding: 1rem;
-  background-color: var(--french-gray-2); /* Matches the background */
+  background-color: var(--french-gray-2);
+
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 1.5rem;
   max-width: 1200px;
   margin: 0 auto;
-}
+} 
 
-/* Individual disaster card styling */
+
 .disaster-box {
-  background-color: var(--onyx); /* Matches the dark background */
+  background-color: var(--onyx);
+
   border: 1px solid var(--outer-space);
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -542,7 +561,6 @@ img {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-/* Card content styling */
 .disaster-box h2 {
   font-size: 1.2rem;
   color: var(--seasalt);
@@ -554,8 +572,8 @@ img {
   color: var(--platinum);
 }
 
-/* Hover effect for the cards */
+
 .disaster-box:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
-}
+} */
