--- a/css/fonts.css
+++ b/css/fonts.css
@@ -26,14 +26,13 @@
    */
 
 #hero h1 {
-  font-family: "Gowun Dodum", sans-serif;
+  font-family: "Exo 2", sans-serif;
   font-weight: 700;
-  font-style: normal;
 }
 
 #hero p {
   font-family: "Gowun Dodum", sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-style: normal;
 }
 
