--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,11 +6,18 @@
   .disaster-card {
     width: 100%;
   }
+
   #hero {
     height: 50svh;
   }
+
   .hideOnpc {
     display: block;
+  }
+
+  .about-container img {
+    width: 100%;
+    height: auto;
   }
 }
 
@@ -18,6 +25,7 @@
   .sidebar {
     width: 100%;
   }
+
   nav a {
     padding: 0 15px;
   }
@@ -82,5 +90,10 @@
 
   .popup-content {
     width: 250px;
+  }
+
+  .about-container img {
+    width: 100%;
+    height: auto;
   }
 }
