--- a/css/planet.css
+++ b/css/planet.css
@@ -1,9 +1,30 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Share+Tech+Mono&display=swap");
+
+/*
+.share-tech-mono-regular {
+  font-family: "Share Tech Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+  }
+  
+  */
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
+.upper {
+  text-transform: uppercase;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  background-color: #212529;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  color: #fff;
+}
 header {
   display: flex;
   justify-content: space-between;
