--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,8 @@ nav li:first-child {
 #logo {
   font-size: 24px;
   font-weight: bold;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 #logo:hover {
@@ -133,7 +134,8 @@ nav li:first-child {
 /* Hero Section */
 
 #hero {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), transparent), url(../assets/image/map.jpeg) no-repeat top center / cover;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), transparent),
+    url(../assets/image/map.jpeg) no-repeat top center / cover;
   padding: 2rem;
   height: 80svh;
   color: #ffffff;
@@ -201,7 +203,6 @@ nav li:first-child {
 #weather-button:hover {
   background-color: #11344b;
 }
-
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 
